2008-07-25  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* manejo_productos.c (CompraCreateNew): If the product doesn't
	exist we return NULL.
	(CompraAgregarALista): If we couldn't get the info of a product we
	return FALSE.

	* compras.c (AddToProductsList): Deleted code that was launching
	AskForCurrentPrice() function. If the barcode it's empty we just
	return without doing nothing.
	(AskForCurrentPrice, AcceptCurrentPrice)
	(CloseAskForCurrentPrice): Deleted functions.
	(AddToProductsList): Added check to know if the product was added
	to the list.

	* postgres-functions.c (GetDayToSell): Deleted function.
	(GetVencDate, GetElabDate, PagarFactura): Deleted commented code.

2008-07-25  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (PutComa): Any coma or point will be
	replaced by the decimal point defined with the locale.

	* manejo_productos.c (CalcularTotalCompra): Changed to gdouble the
	type of variable total.

	* compras.c (SearchProductHistory): Used only the plpsql function
	informacion_producto() to get the info to show on buy tab. This
	will speed up the time that take show this information.

	* ventas.c (check_passwd, exit_response): Added the use of
	log_register_access () to log the login/logout of a user.

	* utils.c (log_register_access): Added function to register a log
	in/out of a user into the log table.

2008-07-24  Jonathan Gonzalez V.  <zeus@gnu.org>

	* caja.c (on_btn_cash_box_open_clicked)
	(on_btn_cash_box_close_clicked): Added functions to open and close
	the cash box using buttons from the main sell window.
	(on_btn_cash_box_clicked): Added function.

	* ventas.c (ventas_win): Removed call to prepare_caja() at the end.
	(on_delete_ventas_gui): Deleted code that was asking to close the
	cash box if the user was the admin.

	* config_file.c (rizoma_get_value, rizoma_get_value_int)
	(rizoma_get_value_boolean, rizoma_get_double_list): Added check of
	DEBUG define to know if we must show an error message when a key